<resources>
    <string name="app_name">Signature</string>
    <string name="app_search_hint">The App name</string>
    <string name="app_pkg_info_got">Got the app details</string>
    <string name="app_target_name">App name:"%1$s"</string>
    <string name="app_package">Package name:"%1$s"</string>
    <string name="app_version">Version info, code: "%1$d", name:"%2$s"</string>
    <string name="app_signature">Signature:"%1$s"</string>
    <string name="app_signature_md5">MD5</string>
    <string name="app_signature_sha1">SHA1</string>
    <string name="app_signature_sha256">SHA256</string>
    <string name="app_signature_copy">Copy Signature</string>
    <string name="app_package_copy">Copy pkg name</string>
    <string name="app_checkbox_upper">Upper Case</string>
    <string name="app_checkbox_colon">With colon</string>
    <string name="app_exit_tips">Press again to exit</string>
    <string name="app_signature_copied">signature info copied</string>
    <string name="app_pkg_name_copied">package name copied</string>
</resources>
