<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/app_item_offset_h"
    android:layout_marginEnd="@dimen/app_item_offset_h"
    tools:context=".AppDetailActivity">

    <TextView
        android:id="@+id/tv_app_pkg"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        tools:text="@string/app_package" />

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/tv_app_pkg"
        android:gravity="center_vertical"
        android:textSize="16sp"
        tools:text="@string/app_version" />

    <TextView
        android:id="@+id/tv_app_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_app_version"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:textSize="16sp"
        tools:text="@string/app_signature" />

    <RadioGroup
        android:id="@+id/rg_signature_type"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/tv_app_signature"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_signature_md5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/app_signature_md5" />

        <RadioButton
            android:id="@+id/rb_signature_sha1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_signature_sha1" />

        <RadioButton
            android:id="@+id/rb_signature_sha256"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_signature_sha256" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/rg_signature_type"
        android:layout_marginTop="@dimen/app_item_offset_v"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbx_upper_case"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:checked="true"
            android:text="@string/app_checkbox_upper" />

        <Button
            android:id="@+id/tv_app_signature_copy"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_signature_copy" />

        <Button
            android:id="@+id/tv_app_package_copy"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_package_copy" />
    </LinearLayout>

</RelativeLayout>